--- a/garlicos-updater.cfg
+++ b/garlicos-updater.cfg
@@ -1,3 +1,3 @@
-garlicOsDownloadPath_001=/download/path/001/
-garlicOsDownloadPath_002=/download/path/002/
+garlicOsDownloadPath_001="/download/path/001/"
+garlicOsDownloadPath_002="/download/path/002/"
 adbDeviceId=adbDeviceId
